src/external/clay/clay.h

// Clay_StringSlice is used to represent non owning string slices, and includes
// a baseChars field which points to the string this slice is derived from.
typedef struct {
    int32_t length;
    const char *chars;
    const char *
        baseChars; // The source string / char* that this slice was derived from
} Clay_StringSlice;
typedef struct Clay_Context Clay_Context;
typedef struct {
    float width, height;
} Clay_Dimensions;
typedef struct {
    float x, y;
} Clay_Vector2;
// Internally clay conventionally represents colors as 0-255, but interpretation
// is up to the renderer.
typedef struct {
    float r, g, b, a;
} Clay_Color;
typedef struct {
    float x, y, width, height;
} Clay_BoundingBox;
// Controls the "radius", or corner rounding of elements, including rectangles,
// borders and images. The rounding is determined by drawing a circle inset into
// the element corner by (radius, radius) pixels.
typedef struct {
    float topLeft;
    float topRight;
    float bottomLeft;
    float bottomRight;
} Clay_CornerRadius;
// Controls various functionality related to text elements.
typedef struct {
    // A pointer that will be transparently passed through to the resulting
    // render command.
    void *userData;
    // The RGBA color of the font to render, conventionally specified as 0-255.
    Clay_Color textColor;
    // An integer transparently passed to Clay_MeasureText to identify the font
    // to use. The debug view will pass fontId = 0 for its internal text.
    uint16_t fontId;
    // Controls the size of the font. Handled by the function provided to
    // Clay_MeasureText.
    uint16_t fontSize;
    // Controls extra horizontal spacing between characters. Handled by the
    // function provided to Clay_MeasureText.
    uint16_t letterSpacing;
    // Controls additional vertical space between wrapped lines of text.
    uint16_t lineHeight;
    // Controls how text "wraps", that is how it is broken into multiple lines
    // when there is insufficient horizontal space. CLAY_TEXT_WRAP_WORDS
    // (default) breaks on whitespace characters. CLAY_TEXT_WRAP_NEWLINES
    // doesn't break on space characters, only on newlines. CLAY_TEXT_WRAP_NONE
    // disables wrapping entirely.
    Clay_TextElementConfigWrapMode wrapMode;
    // Controls how wrapped lines of text are horizontally aligned within the
    // outer text bounding box. CLAY_TEXT_ALIGN_LEFT (default) - Horizontally
    // aligns wrapped lines of text to the left hand side of their bounding box.
    // CLAY_TEXT_ALIGN_CENTER - Horizontally aligns wrapped lines of text to the
    // center of their bounding box. CLAY_TEXT_ALIGN_RIGHT - Horizontally aligns
    // wrapped lines of text to the right hand side of their bounding box.
    Clay_TextAlignment textAlignment;
} Clay_TextElementConfig;
// Scroll -----------------------------

// Controls the axis on which an element switches to "scrolling", which clips
// the contents and allows scrolling in that direction.
typedef struct {
    bool horizontal; // Clip overflowing elements on the X axis and allow
                     // scrolling left and right.
    bool vertical;   // Clip overflowing elements on the YU axis and allow
                     // scrolling up and down.
} Clay_ScrollElementConfig;
// Border -----------------------------

// Controls the widths of individual element borders.
typedef struct {
    uint16_t left;
    uint16_t right;
    uint16_t top;
    uint16_t bottom;
    // Creates borders between each child element, depending on the
    // .layoutDirection. e.g. for LEFT_TO_RIGHT, borders will be vertical lines,
    // and for TOP_TO_BOTTOM borders will be horizontal lines. .betweenChildren
    // borders will result in individual RECTANGLE render commands being
    // generated.
    uint16_t betweenChildren;
} Clay_BorderWidth;
// Render Command Data -----------------------------

// Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_TEXT
typedef struct {
    // A string slice containing the text to be rendered.
    // Note: this is not guaranteed to be null terminated.
    Clay_StringSlice stringContents;
    // Conventionally represented as 0-255 for each channel, but interpretation
    // is up to the renderer.
    Clay_Color textColor;
    // An integer representing the font to use to render this text,
    // transparently passed through from the text declaration.
    uint16_t fontId;
    uint16_t fontSize;
    // Specifies the extra whitespace gap in pixels between each character.
    uint16_t letterSpacing;
    // The height of the bounding box for this line of text.
    uint16_t lineHeight;
} Clay_TextRenderData;
// Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_RECTANGLE
typedef struct {
    // The solid background color to fill this rectangle with. Conventionally
    // represented as 0-255 for each channel, but interpretation is up to the
    // renderer.
    Clay_Color backgroundColor;
    // Controls the "radius", or corner rounding of elements, including
    // rectangles, borders and images. The rounding is determined by drawing a
    // circle inset into the element corner by (radius, radius) pixels.
    Clay_CornerRadius cornerRadius;
} Clay_RectangleRenderData;
// Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_IMAGE
typedef struct {
    // The tint color for this image. Note that the default value is 0,0,0,0 and
    // should likely be interpreted as "untinted". Conventionally represented as
    // 0-255 for each channel, but interpretation is up to the renderer.
    Clay_Color backgroundColor;
    // Controls the "radius", or corner rounding of this image.
    // The rounding is determined by drawing a circle inset into the element
    // corner by (radius, radius) pixels.
    Clay_CornerRadius cornerRadius;
    // The original dimensions of the source image, used to control aspect
    // ratio.
    Clay_Dimensions sourceDimensions;
    // A pointer transparently passed through from the original element
    // definition, typically used to represent image data.
    void *imageData;
} Clay_ImageRenderData;
// Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_CUSTOM
typedef struct {
    // Passed through from .backgroundColor in the original element declaration.
    // Conventionally represented as 0-255 for each channel, but interpretation
    // is up to the renderer.
    Clay_Color backgroundColor;
    // Controls the "radius", or corner rounding of this custom element.
    // The rounding is determined by drawing a circle inset into the element
    // corner by (radius, radius) pixels.
    Clay_CornerRadius cornerRadius;
    // A pointer transparently passed through from the original element
    // definition.
    void *customData;
} Clay_CustomRenderData;
// Render command data when commandType ==
// CLAY_RENDER_COMMAND_TYPE_SCISSOR_START || commandType ==
// CLAY_RENDER_COMMAND_TYPE_SCISSOR_END
typedef struct {
    bool horizontal;
    bool vertical;
} Clay_ScrollRenderData;
// Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_BORDER
typedef struct {
    // Controls a shared color for all this element's borders.
    // Conventionally represented as 0-255 for each channel, but interpretation
    // is up to the renderer.
    Clay_Color color;
    // Specifies the "radius", or corner rounding of this border element.
    // The rounding is determined by drawing a circle inset into the element
    // corner by (radius, radius) pixels.
    Clay_CornerRadius cornerRadius;
    // Controls individual border side widths.
    Clay_BorderWidth width;
} Clay_BorderRenderData;
// A struct union containing data specific to this command's .commandType
typedef union {
    // Render command data when commandType ==
    // CLAY_RENDER_COMMAND_TYPE_RECTANGLE
    Clay_RectangleRenderData rectangle;
    // Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_TEXT
    Clay_TextRenderData text;
    // Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_IMAGE
    Clay_ImageRenderData image;
    // Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_CUSTOM
    Clay_CustomRenderData custom;
    // Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_BORDER
    Clay_BorderRenderData border;
    // Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_SCROLL
    Clay_ScrollRenderData scroll;
} Clay_RenderData;
// Miscellaneous Structs & Enums ---------------------------------

// Data representing the current internal state of a scrolling element.
typedef struct {
    // Note: This is a pointer to the real internal scroll position, mutating it
    // may cause a change in final layout. Intended for use with external
    // functionality that modifies scroll position, such as scroll bars or auto
    // scrolling.
    Clay_Vector2 *scrollPosition;
    // The bounding box of the scroll element.
    Clay_Dimensions scrollContainerDimensions;
    // The outer dimensions of the inner scroll container content, including the
    // padding of the parent scroll container.
    Clay_Dimensions contentDimensions;
    // The config that was originally passed to the scroll element.
    Clay_ScrollElementConfig config;
    // Indicates whether an actual scroll container matched the provided ID or
    // if the default struct was returned.
    bool found;
} Clay_ScrollContainerData;
// Bounding box and other data for a specific UI element.
typedef struct {
    // The rectangle that encloses this UI element, with the position relative
    // to the root of the layout.
    Clay_BoundingBox boundingBox;
    // Indicates whether an actual Element matched the provided ID or if the
    // default struct was returned.
    bool found;
} Clay_ElementData;
// Used by renderers to determine specific handling for each render command.
typedef CLAY_PACKED_ENUM{
    // This command type should be skipped.
    CLAY_RENDER_COMMAND_TYPE_NONE,
    // The renderer should draw a solid color rectangle.
    CLAY_RENDER_COMMAND_TYPE_RECTANGLE,
    // The renderer should draw a colored border inset into the bounding box.
    CLAY_RENDER_COMMAND_TYPE_BORDER,
    // The renderer should draw text.
    CLAY_RENDER_COMMAND_TYPE_TEXT,
    // The renderer should draw an image.
    CLAY_RENDER_COMMAND_TYPE_IMAGE,
    // The renderer should begin clipping all future draw commands, only
    // rendering content that falls within the provided boundingBox.
    CLAY_RENDER_COMMAND_TYPE_SCISSOR_START,
    // The renderer should finish any previously active clipping, and begin
    // rendering elements in full again.
    CLAY_RENDER_COMMAND_TYPE_SCISSOR_END,
    // The renderer should provide a custom implementation for handling this
    // render command based on its .customData
    CLAY_RENDER_COMMAND_TYPE_CUSTOM,
} Clay_RenderCommandType;
typedef struct {
    // A rectangular box that fully encloses this UI element, with the position
    // relative to the root of the layout.
    Clay_BoundingBox boundingBox;
    // A struct union containing data specific to this command's commandType.
    Clay_RenderData renderData;
    // A pointer transparently passed through from the original element
    // declaration.
    void *userData;
    // The id of this element, transparently passed through from the original
    // element declaration.
    uint32_t id;
    // The z order required for drawing this command correctly.
    // Note: the render command array is already sorted in ascending order, and
    // will produce correct results if drawn in naive order. This field is
    // intended for use in batching renderers for improved performance.
    int16_t zIndex;
    // Specifies how to handle rendering of this command.
    // CLAY_RENDER_COMMAND_TYPE_RECTANGLE - The renderer should draw a solid
    // color rectangle. CLAY_RENDER_COMMAND_TYPE_BORDER - The renderer should
    // draw a colored border inset into the bounding box.
    // CLAY_RENDER_COMMAND_TYPE_TEXT - The renderer should draw text.
    // CLAY_RENDER_COMMAND_TYPE_IMAGE - The renderer should draw an image.
    // CLAY_RENDER_COMMAND_TYPE_SCISSOR_START - The renderer should begin
    // clipping all future draw commands, only rendering content that falls
    // within the provided boundingBox. CLAY_RENDER_COMMAND_TYPE_SCISSOR_END -
    // The renderer should finish any previously active clipping, and begin
    // rendering elements in full again. CLAY_RENDER_COMMAND_TYPE_CUSTOM - The
    // renderer should provide a custom implementation for handling this render
    // command based on its .customData
    Clay_RenderCommandType commandType;
} Clay_RenderCommand;
// A sized array of render commands.
typedef struct {
    // The underlying max capacity of the array, not necessarily all
    // initialized.
    int32_t capacity;
    // The number of initialized elements in this array. Used for loops and
    // iteration.
    int32_t length;
    // A pointer to the first element in the internal array.
    Clay_RenderCommand *internalArray;
} Clay_RenderCommandArray;
// Binds a callback function that Clay will call to determine the dimensions of
// a given string slice.
// - measureTextFunction is a user provided function that adheres to the
// interface Clay_Dimensions (Clay_StringSlice text, Clay_TextElementConfig
// *config, void *userData);
// - userData is a pointer that will be transparently passed through when the
// measureTextFunction is called.
CLAY_DLL_EXPORT void Clay_SetMeasureTextFunction(
    Clay_Dimensions (*measureTextFunction)(Clay_StringSlice text,
                                           Clay_TextElementConfig *config,
                                           void *userData),
    void *userData);
// Experimental - Used in cases where Clay needs to integrate with a system that
// manages its own scrolling containers externally. Please reach out if you plan
// to use this function, as it may be subject to change.
CLAY_DLL_EXPORT void Clay_SetQueryScrollOffsetFunction(
    Clay_Vector2 (*queryScrollOffsetFunction)(uint32_t elementId,
                                              void *userData),
    void *userData);
Clay_Dimensions (*Clay__MeasureText)(Clay_StringSlice text,
                                     Clay_TextElementConfig *config,
                                     void *userData);
Clay_Vector2 (*Clay__QueryScrollOffset)(uint32_t elementId, void *userData);
void Clay_SetMeasureTextFunction(
    Clay_Dimensions (*measureTextFunction)(Clay_StringSlice text,
                                           Clay_TextElementConfig *config,
                                           void *userData),
    void *userData) {
    Clay_Context *context = Clay_GetCurrentContext();
    Clay__MeasureText = measureTextFunction;
    context->measureTextUserData = userData;
}
void Clay_SetQueryScrollOffsetFunction(
    Clay_Vector2 (*queryScrollOffsetFunction)(uint32_t elementId,
                                              void *userData),
    void *userData) {
    Clay_Context *context = Clay_GetCurrentContext();
    Clay__QueryScrollOffset = queryScrollOffsetFunction;
    context->queryScrollOffsetUserData = userData;
}