src/bindings/clay.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_TextRenderData"][::std::mem::size_of::<Clay_TextRenderData>() - 48usize];
    ["Alignment of Clay_TextRenderData"][::std::mem::align_of::<Clay_TextRenderData>() - 8usize];
    ["Offset of field: Clay_TextRenderData::stringContents"]
        [::std::mem::offset_of!(Clay_TextRenderData, stringContents) - 0usize];
    ["Offset of field: Clay_TextRenderData::textColor"]
        [::std::mem::offset_of!(Clay_TextRenderData, textColor) - 24usize];
    ["Offset of field: Clay_TextRenderData::fontId"][::std::mem::offset_of!(Clay_TextRenderData, fontId) - 40usize];
    ["Offset of field: Clay_TextRenderData::fontSize"][::std::mem::offset_of!(Clay_TextRenderData, fontSize) - 42usize];
    ["Offset of field: Clay_TextRenderData::letterSpacing"]
        [::std::mem::offset_of!(Clay_TextRenderData, letterSpacing) - 44usize];
    ["Offset of field: Clay_TextRenderData::lineHeight"]
        [::std::mem::offset_of!(Clay_TextRenderData, lineHeight) - 46usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_RectangleRenderData {
    pub backgroundColor: Clay_Color,
    pub cornerRadius: Clay_CornerRadius,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_RectangleRenderData"][::std::mem::size_of::<Clay_RectangleRenderData>() - 32usize];
    ["Alignment of Clay_RectangleRenderData"][::std::mem::align_of::<Clay_RectangleRenderData>() - 4usize];
    ["Offset of field: Clay_RectangleRenderData::backgroundColor"]
        [::std::mem::offset_of!(Clay_RectangleRenderData, backgroundColor) - 0usize];
    ["Offset of field: Clay_RectangleRenderData::cornerRadius"]
        [::std::mem::offset_of!(Clay_RectangleRenderData, cornerRadius) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ImageRenderData {
    pub backgroundColor: Clay_Color,
    pub cornerRadius: Clay_CornerRadius,
    pub sourceDimensions: Clay_Dimensions,
    pub imageData: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ImageRenderData"][::std::mem::size_of::<Clay_ImageRenderData>() - 48usize];
    ["Alignment of Clay_ImageRenderData"][::std::mem::align_of::<Clay_ImageRenderData>() - 8usize];
    ["Offset of field: Clay_ImageRenderData::backgroundColor"]
        [::std::mem::offset_of!(Clay_ImageRenderData, backgroundColor) - 0usize];
    ["Offset of field: Clay_ImageRenderData::cornerRadius"]
        [::std::mem::offset_of!(Clay_ImageRenderData, cornerRadius) - 16usize];
    ["Offset of field: Clay_ImageRenderData::sourceDimensions"]
        [::std::mem::offset_of!(Clay_ImageRenderData, sourceDimensions) - 32usize];
    ["Offset of field: Clay_ImageRenderData::imageData"]
        [::std::mem::offset_of!(Clay_ImageRenderData, imageData) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_CustomRenderData {
    pub backgroundColor: Clay_Color,
    pub cornerRadius: Clay_CornerRadius,
    pub customData: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_CustomRenderData"][::std::mem::size_of::<Clay_CustomRenderData>() - 40usize];
    ["Alignment of Clay_CustomRenderData"][::std::mem::align_of::<Clay_CustomRenderData>() - 8usize];
    ["Offset of field: Clay_CustomRenderData::backgroundColor"]
        [::std::mem::offset_of!(Clay_CustomRenderData, backgroundColor) - 0usize];
    ["Offset of field: Clay_CustomRenderData::cornerRadius"]
        [::std::mem::offset_of!(Clay_CustomRenderData, cornerRadius) - 16usize];
    ["Offset of field: Clay_CustomRenderData::customData"]
        [::std::mem::offset_of!(Clay_CustomRenderData, customData) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ScrollRenderData {
    pub horizontal: bool,
    pub vertical: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ScrollRenderData"][::std::mem::size_of::<Clay_ScrollRenderData>() - 2usize];
    ["Alignment of Clay_ScrollRenderData"][::std::mem::align_of::<Clay_ScrollRenderData>() - 1usize];
    ["Offset of field: Clay_ScrollRenderData::horizontal"]
        [::std::mem::offset_of!(Clay_ScrollRenderData, horizontal) - 0usize];
    ["Offset of field: Clay_ScrollRenderData::vertical"]
        [::std::mem::offset_of!(Clay_ScrollRenderData, vertical) - 1usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_BorderRenderData {
    pub color: Clay_Color,
    pub cornerRadius: Clay_CornerRadius,
    pub width: Clay_BorderWidth,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_BorderRenderData"][::std::mem::size_of::<Clay_BorderRenderData>() - 44usize];
    ["Alignment of Clay_BorderRenderData"][::std::mem::align_of::<Clay_BorderRenderData>() - 4usize];
    ["Offset of field: Clay_BorderRenderData::color"][::std::mem::offset_of!(Clay_BorderRenderData, color) - 0usize];
    ["Offset of field: Clay_BorderRenderData::cornerRadius"]
        [::std::mem::offset_of!(Clay_BorderRenderData, cornerRadius) - 16usize];
    ["Offset of field: Clay_BorderRenderData::width"][::std::mem::offset_of!(Clay_BorderRenderData, width) - 32usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub union Clay_RenderData {
    pub rectangle: Clay_RectangleRenderData,
    pub text: Clay_TextRenderData,
    pub image: Clay_ImageRenderData,
    pub custom: Clay_CustomRenderData,
    pub border: Clay_BorderRenderData,
    pub scroll: Clay_ScrollRenderData,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_RenderData"][::std::mem::size_of::<Clay_RenderData>() - 48usize];
    ["Alignment of Clay_RenderData"][::std::mem::align_of::<Clay_RenderData>() - 8usize];
    ["Offset of field: Clay_RenderData::rectangle"][::std::mem::offset_of!(Clay_RenderData, rectangle) - 0usize];
    ["Offset of field: Clay_RenderData::text"][::std::mem::offset_of!(Clay_RenderData, text) - 0usize];
    ["Offset of field: Clay_RenderData::image"][::std::mem::offset_of!(Clay_RenderData, image) - 0usize];
    ["Offset of field: Clay_RenderData::custom"][::std::mem::offset_of!(Clay_RenderData, custom) - 0usize];
    ["Offset of field: Clay_RenderData::border"][::std::mem::offset_of!(Clay_RenderData, border) - 0usize];
    ["Offset of field: Clay_RenderData::scroll"][::std::mem::offset_of!(Clay_RenderData, scroll) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ScrollContainerData {
    pub scrollPosition: *mut Clay_Vector2,
    pub scrollContainerDimensions: Clay_Dimensions,
    pub contentDimensions: Clay_Dimensions,
    pub config: Clay_ScrollElementConfig,
    pub found: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ScrollContainerData"][::std::mem::size_of::<Clay_ScrollContainerData>() - 32usize];
    ["Alignment of Clay_ScrollContainerData"][::std::mem::align_of::<Clay_ScrollContainerData>() - 8usize];
    ["Offset of field: Clay_ScrollContainerData::scrollPosition"]
        [::std::mem::offset_of!(Clay_ScrollContainerData, scrollPosition) - 0usize];
    ["Offset of field: Clay_ScrollContainerData::scrollContainerDimensions"]
        [::std::mem::offset_of!(Clay_ScrollContainerData, scrollContainerDimensions) - 8usize];
    ["Offset of field: Clay_ScrollContainerData::contentDimensions"]
        [::std::mem::offset_of!(Clay_ScrollContainerData, contentDimensions) - 16usize];
    ["Offset of field: Clay_ScrollContainerData::config"]
        [::std::mem::offset_of!(Clay_ScrollContainerData, config) - 24usize];
    ["Offset of field: Clay_ScrollContainerData::found"]
        [::std::mem::offset_of!(Clay_ScrollContainerData, found) - 26usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ElementData {
    pub boundingBox: Clay_BoundingBox,
    pub found: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ElementData"][::std::mem::size_of::<Clay_ElementData>() - 20usize];
    ["Alignment of Clay_ElementData"][::std::mem::align_of::<Clay_ElementData>() - 4usize];
    ["Offset of field: Clay_ElementData::boundingBox"][::std::mem::offset_of!(Clay_ElementData, boundingBox) - 0usize];
    ["Offset of field: Clay_ElementData::found"][::std::mem::offset_of!(Clay_ElementData, found) - 16usize];
};
pub const Clay_RenderCommandType_CLAY_RENDER_COMMAND_TYPE_NONE: Clay_RenderCommandType = 0;
pub const Clay_RenderCommandType_CLAY_RENDER_COMMAND_TYPE_RECTANGLE: Clay_RenderCommandType = 1;
pub const Clay_RenderCommandType_CLAY_RENDER_COMMAND_TYPE_BORDER: Clay_RenderCommandType = 2;
pub const Clay_RenderCommandType_CLAY_RENDER_COMMAND_TYPE_TEXT: Clay_RenderCommandType = 3;
pub const Clay_RenderCommandType_CLAY_RENDER_COMMAND_TYPE_IMAGE: Clay_RenderCommandType = 4;
pub const Clay_RenderCommandType_CLAY_RENDER_COMMAND_TYPE_SCISSOR_START: Clay_RenderCommandType = 5;
pub const Clay_RenderCommandType_CLAY_RENDER_COMMAND_TYPE_SCISSOR_END: Clay_RenderCommandType = 6;
pub const Clay_RenderCommandType_CLAY_RENDER_COMMAND_TYPE_CUSTOM: Clay_RenderCommandType = 7;
pub type Clay_RenderCommandType = ::std::os::raw::c_uchar;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_RenderCommand {
    pub boundingBox: Clay_BoundingBox,
    pub renderData: Clay_RenderData,
    pub userData: *mut ::std::os::raw::c_void,
    pub id: u32,
    pub zIndex: i16,
    pub commandType: Clay_RenderCommandType,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_RenderCommand"][::std::mem::size_of::<Clay_RenderCommand>() - 80usize];
    ["Alignment of Clay_RenderCommand"][::std::mem::align_of::<Clay_RenderCommand>() - 8usize];
    ["Offset of field: Clay_RenderCommand::boundingBox"]
        [::std::mem::offset_of!(Clay_RenderCommand, boundingBox) - 0usize];
    ["Offset of field: Clay_RenderCommand::renderData"]
        [::std::mem::offset_of!(Clay_RenderCommand, renderData) - 16usize];
    ["Offset of field: Clay_RenderCommand::userData"][::std::mem::offset_of!(Clay_RenderCommand, userData) - 64usize];
    ["Offset of field: Clay_RenderCommand::id"][::std::mem::offset_of!(Clay_RenderCommand, id) - 72usize];
    ["Offset of field: Clay_RenderCommand::zIndex"][::std::mem::offset_of!(Clay_RenderCommand, zIndex) - 76usize];
    ["Offset of field: Clay_RenderCommand::commandType"]
        [::std::mem::offset_of!(Clay_RenderCommand, commandType) - 78usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_RenderCommandArray {
    pub capacity: i32,
    pub length: i32,
    pub internalArray: *mut Clay_RenderCommand,
}
